# MacSTL

./: .gitignore  CMakeLists.txt  README.txt  doxygen.config  readme.rtf  runDoxygen.bat  runDoxygen.sh
mac/: Info.plist  doxygen.config  macstl.mcp
mac/English.lproj/: InfoPlist.strings
mac/macstl-106.xcodeproj/: project.pbxproj
mac/macstl.xcode/: project.pbxproj
mac/macstl.xcodeproj/: project.pbxproj
mac/macstl.xlc.xcode/: project.pbxproj
macstl/: algorithm.h  boolean.h  channel.h  com.h  complex.h  core.h  functional.h  mach.h  mmapping.h  pixel.h  refptr.h  typelist.h  valarray.h  vec.h
macstl/impl/: allocator.h  com_ptr.h  com_type.h  (+28 more)
macstlizer/: altivec2macstl.pl  altivec2mmx.h
test/: .cproject  .project  64typedefs.h  NaN.h  StreamEx.h  avx_mathfun.h  benchmark-macstl.cpp  benchmark-macstl.h  benchmark-macstl2.cpp  benchmark.cpp  common.h  comtest.cpp  coretest.cpp  exhaustive.cpp  findtest  findtest.cpp  machtest.cpp  mathdef.h  mmaptest.cpp  sse_mathfun.h  sse_mathfun_test.c  timing.c  timing.h  vectest  vectest.cpp
unix/: Makefile  Makefile.ccopt
win/: .cproject  .project  Makefile.win  benchmark-macstl-vs2012.vcxproj  benchmark-macstl.vcproj  benchmark-macstl.vcxproj  benchmark-macstl.vcxproj.filters  benchmark-macstl2-VS2012.vcxproj  benchmark-macstl2.vcproj  benchmark-macstl2.vcxproj  benchmark.icproj  benchmark.vcproj  findtest-vs2012.vcxproj  findtest.vcxproj  macstl-tests-VS2010.sln  macstl-tests-VS2012.sln  macstl.dev  macstl.icc.sln  macstl.layout  macstl.sln  vectest-vs2012.vcxproj  vectest.icproj  vectest.vcproj  vectest.vcxproj
